hid netlify form. set portfolioimg height to 100% to fix stretching

--- a/src/App.css
+++ b/src/App.css
@@ -157,6 +157,9 @@ padding-top: 10vw;
 #project1desc{
   visibility: hidden;
 }
+.projectimg{
+  height: 100%;
+}
 .techicon{
   width: 100%;
   transition: all .1s ease-in-out;
